testData/inspection/color/invalidColorName.mjml
<mj-section
    <error descr="Invalid color specification, either the color name, hex or rgb notation can be used">background-color="reeed"</error>
></mj-section>
